--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^2.2.4",
     "framer-motion": "^11.0.15",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@chakra-ui/storybook-addon": "^5.1.0",
