--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vocabulary-test",
+  "name": "wordah-web",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -20,7 +20,8 @@
     "framer-motion": "^11.0.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-use": "^17.5.0"
   },
   "devDependencies": {
     "@chakra-ui/storybook-addon": "^5.1.0",
